# Criteo-Search-Data

./: LICENSE  README.md  Trial1.ipynb  create_csv_file.py  dfs_criteo.ipynb  dfs_test.ipynb  main_notebook.ipynb  pyproject.toml  requirements.txt
scripts/: create_csv_file.py  show_dataset.py
