[project]
name = "criteo-search-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "featuretools>=1.31.0",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tpot>=0.12.2",
    "woodwork>=0.31.0",
]
